--- a/blueprints/infokiosk/templates/infokiosk/_bottom.html
+++ b/blueprints/infokiosk/templates/infokiosk/_bottom.html
@@ -15,6 +15,8 @@
                 <a href="{{ url_for('.index') }}" class="btn btn-large"><i class="icon-chevron-left"></i> В начало</a>
                 <a href="{{ url_for('.doctors', lpu_id=session.get('lpu_id'), department_id=session.get('department_id'), sp=doctor.speciality) }}" class="btn btn-large"><i class="icon-chevron-left"></i> К выбору врача</a>
             {%- elif session.get('step') == 7 -%}
+                <a href="{{ url_for('.index') }}" class="btn btn-large"><i class="icon-chevron-left"></i> В начало</a>
+                <a href="{{ url_for('.tickets', lpu_id=request.view_args.get('lpu_id'), department_id=request.view_args.get('department_id'), doctor_id=request.view_args.get('doctor_id')) }}" class="btn btn-large"><i class="icon-chevron-left"></i> К расписанию</a>
             {%- elif session.get('step') == 8 -%}
             {%- endif -%}
         </div>
