--- a/blueprints/infokiosk/templates/infokiosk/_footer.html
+++ b/blueprints/infokiosk/templates/infokiosk/_footer.html
@@ -5,12 +5,13 @@
 <script type="text/javascript">
     $STATIC_DIR = '{{ url_for('.static', filename='') }}';
 </script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/jquery-1.8.2.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.placeholder.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/scripts.js') }}"></script>
+{#<script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.placeholder.min.js') }}"></script>#}
+<script type="text/javascript" src="{{ url_for('.static', filename='js/bililiteRange.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.sendkeys.js') }}"></script>
+{#<script type="text/javascript" src="{{ url_for('.static', filename='js/scripts.js') }}"></script>#}
 <script type="text/javascript" src="{{ url_for('.static', filename='js/ie6.min.js') }}"></script>
-<script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
+{#<script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>#}
 
 <!--[if IE]>
    <script type="text/javascript" src="{{ url_for('.static', filename='js/respond.min.js') }}"></script>
