--- a/blueprints/infokiosk/templates/infokiosk/_header.html
+++ b/blueprints/infokiosk/templates/infokiosk/_header.html
@@ -7,11 +7,12 @@
 <link href="{{ url_for('.static', filename='i/favicon.ico') }}" rel="icon" type="image/x-icon" />
 <link href="{{ url_for('.static', filename='i/favicon.ico') }}" rel="shortcut icon" type="image/x-icon" />
 
-<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/jquery-ui/blitzer/jquery-ui-1.9.1.custom.min.css') }}" />
+{#<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/jquery-ui/blitzer/jquery-ui-1.9.1.custom.min.css') }}" />#}
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-responsive.min.css') }}" />
 <link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}" media="screen" />
-<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/print.css') }}" media="print" />
+{#<link type="text/css" rel="stylesheet" href="{{ url_for('.static', filename='css/print.css') }}" media="print" />#}
 <!--[if IE 6]>
     <link type="text/css" href="{{ url_for('.static', filename='css/ie6.min.css') }}" rel="stylesheet">
 <![endif]-->
+<script type="text/javascript" src="{{ url_for('.static', filename='js/jquery-1.8.2.min.js') }}"></script>
