--- a/blueprints/infokiosk/templates/infokiosk/registration.html
+++ b/blueprints/infokiosk/templates/infokiosk/registration.html
@@ -4,136 +4,161 @@
 <blockquote class="red">{{ lpu.name }}{% if lpu|attr('buildings') and lpu.buildings[0] %}, {{ lpu.buildings[0]|attr('name') }}{% if lpu.buildings[0]|attr('address') %} ({{ lpu.buildings[0]|attr('address') }}){% endif %}{% endif %}<br />
 {% if lpu.phone %}<small>Телефон: {{ lpu.phone }}</small>{% endif %}
 {% if doctor.speciality %}<small>{{ doctor.speciality }}</small>{% endif %}
-{% if doctor %}{{ doctor.get('lastName') }} {{ doctor.get('firstName') }} {{ doctor.get('patronymic') }}{% endif %}{% if office is defined %} (кабинет: {{ office }}){% endif %}<br/>
+{% if doctor %}{{ doctor.get('lastName') }} {{ doctor.get('firstName') }} {{ doctor.get('patronymic') }}{% endif %}{% if office is defined and office %} (кабинет: {{ office }}){% endif %}<br/>
 Дата и время приёма: {{ date|dateformat('dd.M.y', rebase=False) }} {{ start_time|datetimeformat('H:mm', rebase=False) }} - {{ finish_time|datetimeformat('H:mm', rebase=False) }}
 </blockquote>
-<div class="well well-small">Внесите данные пациента</div>
-<legend>Информация о записи</legend>
-{% with errors = get_flashed_messages(category_filter=["error"]) %}
-  {% if errors %}
+{%- with errors = get_flashed_messages(category_filter=["error"]) -%}
+  {%- if errors -%}
     <div class="alert alert-error" title="Ошибка записи">
         <strong>Ошибка записи!</strong>
         <ul class="unstyled no-vmargin">
-        {% for error in errors %}
+        {%- for error in errors -%}
           <li>{{ error }}</li>
-        {% endfor %}
+        {%- endfor -%}
         </ul>
     </div>
-  {% endif %}
-{% endwith %}
-{% if form.errors %}
+  {%- endif -%}
+{%- endwith -%}
+{%- if form.errors -%}
 <div class="alert alert-error" title="Ошибка заполнения формы">
     <strong>Форма заполнена некорректно</strong>
     <ul class="unstyled no-vmargin">
-        {% for field_name in form.errors %}
-            {% for error in form.errors[field_name] %}
+        {%- for field_name in form.errors -%}
+            {%- for error in form.errors[field_name] -%}
                 <li>{{ form[field_name].label(class="inline") }}: {{ error }}</li>
-            {% endfor %}
-        {% endfor %}
+            {%- endfor -%}
+        {%- endfor -%}
     </ul>
 </div>
-{% endif %}
-{% with messages = get_flashed_messages(category_filter=["info"]) %}
-  {% if messages %}
+{%- endif -%}
+{%- with messages = get_flashed_messages(category_filter=["info"]) -%}
+  {%- if messages -%}
     <div class="alert alert-success" title="Сообщение">
         <ul class="unstyled no-vmargin">
-        {% for message in messages %}
+        {%- for message in messages -%}
           <li>{{ message }}</li>
-        {% endfor %}
+        {%- endfor -%}
         </ul>
     </div>
-  {% endif %}
-{% endwith %}
-<div class="well well-small">
+  {%- endif -%}
+{%- endwith -%}
 <form id="patient_form" action="" method="post" name="frm" class="form-horizontal">
     {{ form.csrf_token }}
     <input type="hidden" name="ticket" value="{{ ticket }}" />
-    <input type="hidden" name="flag" value="True" />
-
-    <legend><big>Данные посетителя</big></legend>
-    <div class="control-group">
-        {{ form.lastname.label(class="control-label") }}
-        <div class="controls">
-            {{ form.lastname(class="span4", autocomplete="off", value=session.get('lastname', ''), placeholder="Иванов") }}
-        </div>
+    <div id="step1" class="input_container control-group">
+        <legend><big>Ваша фамилия</big></legend>
+        {{ form.lastname(class="span12", autocomplete="off", value=session.get('lastname', '')) }}
     </div>
-    <div class="control-group">
-        {{ form.firstname.label(class="control-label") }}
-        <div class="controls">
-            {{ form.firstname(class="span4", autocomplete="off", value=session.get('firstname', ''), placeholder="Иван") }}
-        </div>
+    <div id="step2" class="input_container hide control-group">
+        <legend><big>Ваше имя</big></legend>
+        {{ form.firstname(class="span12", autocomplete="off", value=session.get('firstname', '')) }}
     </div>
-
-    <div class="control-group">
-        {{ form.patronymic.label(class="control-label") }}
-        <div class="controls">
-            {{ form.patronymic(class="span4", autocomplete="off", value=session.get('patronymic', ''), placeholder="Иванович") }}
-        </div>
+    <div id="step3" class="input_container hide control-group">
+        <legend><big>Ваше отчество</big></legend>
+        {{ form.patronymic(class="span12", autocomplete="off", value=session.get('patronymic', '')) }}
     </div>
-
-    <div class="control-group">
-        <label class="control-label" for="dd">Дата рождения<span class="text-error">*</span></label>
-        <div class="controls">
-            {{ form.day(class="day_month", id="dd", autocomplete="on", value=session.get('day', ''), maxlength=2, placeholder="01") }}
-            {{ form.month(class="day_month", id="mm", autocomplete="on", value=session.get('month', ''), maxlength=2, placeholder="12") }}
-            {{ form.year(class="year", id="yy", autocomplete="on", value=session.get('year', ''), maxlength=4, placeholder="2001") }}
+    <div id="step4" class="input_container hide control-group">
+        <legend><big>Дата рождения</big></legend>
+        <div class="text-center">
+        {{ form.day(class="day_month text-center", id="dd", autocomplete="off", value=session.get('day', ''), maxlength=2) }}
+        {{ form.month(class="day_month text-center", id="mm", autocomplete="off", value=session.get('month', ''), maxlength=2) }}
+        {{ form.year(class="year text-center", id="yy", autocomplete="off", value=session.get('year', ''), maxlength=4) }}
         </div>
     </div>
 
-    <div class="control-group">
-        {{ form.gender.label(class="control-label") }}
-        <div class="controls">
-            {{ form.gender(class="inline clearfix", value=session.get('gender', '')) }}
-        </div>
+    <div id="step5" class="input_container hide control-group">
+        {% include 'infokiosk/__documents_select.html' %}
     </div>
 
-    {% include 'infokiosk/__documents_select.html' %}
+    <div id="error" class="alert alert-error hide">Некорректно заполнены данные</div>
+    {% include 'infokiosk/_virtual_keyboard.html' %}
 
-    <div class="control-group">
-        <div class="controls">
-            {{ form.send_email(id="chb") }} - отправить информацию о записи на электронный адрес
+    <div class="well well-small">
+        <div class="row-fluid">
+            <div class="span6"><button type="button" id="btn-step-bkwrd" class="btn btn-large btn-danger hide"><i class="icon-white icon-chevron-left"></i> Назад</button></div>
+            <div class="span6 text-right">
+                <button type="button" id="btn-step-frwrd" class="btn btn-large btn-success" disabled>Далее <i class="icon-white icon-chevron-right"></i></button>
+                <button type="submit" id="btn-submit" class="btn btn-large btn-success hide" disabled><i class="icon-white icon-ok"></i> Записаться</button>
+            </div>
         </div>
-    </div>
-    <div class="control-group">
-        {{ form.email.label(class="control-label") }}
-        <div class="controls">
-            {% if session.get('send_email', False) %}
-                {{ form.email(class="span4", autocomplete="off", value=session.get('email', ''), placeholder="example@email.ru") }}
-            {% else %}
-                {{ form.email(class="span4", autocomplete="off", value=session.get('email', ''), placeholder="example@email.ru", disabled="disabled") }}
-            {% endif %}
-        <br>
-        <span>- Вам будет отправлен талон на прием</span><br>
-        <span>- Вам будет отправлена ссылка для отмены записи на прием</span>
-        </div>
-    </div>
-
-    <div class="control-group">
-        {{ form.captcha.label(class="control-label") }}
-        <div class="controls">
-            {{ form.captcha(class="span1", value="") }}
-        </div>
-    </div>
-
-    <div class="control-group">
-        <div class="controls">
-            <span class="text-error">* - поля, обязательные для заполнения</span>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span7">
-            <label for="confirm">
-                <input id="confirm" name="confirm" type="checkbox" value="y"> Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.
-            </label>
-        </div>
-    </div>
-
-    <div class="form-actions">
-        <button type="submit" id="button-submit" class="btn btn-success disabled" disabled>Подтвердить</button>
-        <a href="{{ url_for('.tickets', lpu_id=request.view_args.get('lpu_id'), department_id=request.view_args.get('department_id'), doctor_id=request.view_args.get('doctor_id')) }}" class="btn">Отменить</a>
     </div>
 </form>
+<div class="well well-small small-text">
+<p>Указывая свои данные на данной странице я даю согласие на автоматизированную обработку в выбранном лечебно-профилактическом учреждении указанной информации (Фамилия, имя, отчество, дата рождения и номер полиса ОМС) для записи на прием в медико-профилактических целях для установления медицинского диагноза и оказания медицинских услуг.</p>
+Мое согласие на автоматизированную обработку указанной информации распространяется на осуществление всех действия с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.
 </div>
-{% include 'infokiosk/_virtual_keyboard.html' %}
-<a href="{{ url_for('.tickets', lpu_id=request.view_args.get('lpu_id'), department_id=request.view_args.get('department_id'), doctor_id=request.view_args.get('doctor_id')) }}" class="btn btn-large"><i class="icon-arrow-left"></i> К расписанию</a>
+{% endblock %}
+{% block js %}
+<script type="text/javascript">
+var step = 1;
+$(document).ready(function(){
+    check_btn();
+    function check_input(step){
+        var $inputs = $('#step'+step).find('input');
+        var result = false;
+        $inputs.each(function(index){
+            $(this).parent('div.input_container').removeClass('error');
+            if (!$(this).val()){
+                $(this).parent('div.input_container').addClass('error');
+                result = false;
+                return false;
+            }
+            result = true;
+        });
+        return result;
+    }
+    function check_btn(){
+        var $inputs = $('#step'+step).find('input');
+        var btn;
+        if (step == 7){
+            btn = $('#btn-submit');
+        } else {
+            btn = $('#btn-step-frwrd');
+        }
+        $inputs.each(function(){
+            $(this).on('change', function(){
+                if ($(this).val()){
+                    btn.removeAttr('disabled');
+                }else{
+                    btn.attr('disabled', "disabled");
+                }
+            });
+        });
+    }
+    function change_step(newvalue){
+        step = newvalue;
+        $('#btn-step-frwrd').addClass('disabled');
+        check_btn();
+        if(step==1){
+            $('#btn-step-bkwrd').hide();
+        }else if(step==2){
+            $('#btn-step-bkwrd').show();
+        }else if (step == 7){
+            $('#btn-step-frwrd').hide();
+            $('#btn-submit').show();
+        }
+        if (step == 4){
+            $('#letters').hide();
+            $('#digits').show();
+        }else{
+            $('#letters').show();
+            $('#digits').hide();
+        }
+    }
+    $('#btn-step-frwrd').click(function(){
+        if(check_input(step)){
+            $('#step'+step).hide();
+            change_step(step + 1);
+            if($('#step'+step)){
+                $('#step'+step).show();
+            }
+        }
+    });
+    $('#btn-step-bkwrd').click(function(){
+        $('#step'+step).hide();
+        change_step(step - 1);
+        $('#step'+step).show();
+    });
+});
+</script>
 {% endblock %}
