ELREG-177 поиск врача без выбора конкретного ЛПУ(http://helpdesk.korusconsulting.ru/browse/ELREG-177)

--- a/blueprints/site/templates/site/search.html
+++ b/blueprints/site/templates/site/search.html
@@ -179,6 +179,8 @@
         var $region = $('select#region_filter');
         var $lpu = $('select#lpu_filter');
         var $speciality = $('select#speciality');
+        var $speciality_chosen = $('#s2id_speciality .select2-chosen');
+        var $doctor_chosen = $('#s2id_doctor .select2-chosen');
         var $doctor = $('select#doctor');
         var $error = $('#error');
         var $lpu_uid = $lpu.val();
@@ -228,7 +230,9 @@
             $('#search_result').html("");
             event.preventDefault();
             $error.hide();
-            if(!$speciality.val() && !$doctor.val()){
+            var if_speciality = ($speciality_chosen.html() === "") || ($speciality_chosen.html() === " ") || ($speciality_chosen.html() === "&nbsp;");
+            var if_doctor = ($doctor_chosen.html() === "") || ($doctor_chosen.html() === " ") || ($doctor_chosen.html() === "&nbsp;");
+            if(if_speciality && if_doctor){
                 $speciality.closest('.control-group').removeClass('success').addClass('error');
                 $doctor.closest('.control-group').removeClass('success').addClass('error');
                 $error.text('Необходимо указать специализацию или ФИО врача').show();
@@ -239,8 +243,8 @@
             }
 
             var doctors = [];
-            if ($doctor.val()){
-                var doctor = find_doctor($doctor.val());
+            if (!if_doctor){
+                var doctor = find_doctor($doctor_chosen.html());
                 if (doctor){
                     doctors.push(doctor);
                 }
@@ -253,11 +257,11 @@
                     lpu_id += "/";
                 }
                 var args = {};
-                if ($speciality.val()){
-                    args['sp'] = $speciality.val();
+                if (!if_speciality){
+                    args['sp'] = $speciality_chosen.html();
                 }
-                if ($doctor.val()){
-                    args['fio'] = $doctor.val();
+                if (!if_doctor){
+                    args['fio'] = $doctor_chosen.html();
                 }
                 $.ajax({
                     url: "{{ url_for('.find_doctors') }}" + lpu_id,
