--- a/blueprints/site/templates/site/_footer.html
+++ b/blueprints/site/templates/site/_footer.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.placeholder.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/scripts.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/select2.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/select2_locale_ru.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/ie6.min.js') }}"></script>
 <script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
 
