--- a/blueprints/infokiosk/templates/infokiosk/ticket_info.html
+++ b/blueprints/infokiosk/templates/infokiosk/ticket_info.html
@@ -55,3 +55,8 @@
 </div>
 </div>
 {% endblock %}
+{% block js %}
+<script type="text/javascript">
+    setTimeout("{{ url_for('.index') }}",30000);
+</script>
+{% endblock %}
